2002-04-08  Ulrik Haugen  <qha@lysator.liu.se>

	* english-strings.el (lyskom-message):
	add-recpt-button-text-regex: updated the regex to reflect the
	change to add-recpt-button-text some time ago.

	* swedish-strings.el (lyskom-message):
	add-recpt-button-text-regex: bug-fix: the backslashes must be
	escaped by backslashes.

2002-04-03  Ulrik Haugen  <qha@lysator.liu.se>

	* Makefile (debian-packages): new target.

2002-03-25  Joel Rosdahl  <joel@lysator.liu.se>

	* distribution-configure.in: Corrected help text for
	--with-default-language.

2002-03-23  Joel Rosdahl  <joel@lysator.liu.se>

	Fix bug 422:

	* commands1.el (lyskom-private-answer): Print informative text if
	replying to Anonymous user.

	* english-strings.el, swedish-strings.el (lyskom-message): Added
	personal-comment-to-anonymous string.

	* swedish-strings.el (lyskom-message): Spelling tweak.

	* commands1.el (lyskom-private-answer-soon-prev): Removed unused
	function.

2002-03-21  Joel Rosdahl  <joel@lysator.liu.se>

	Fiddled with various release-related things. Fixes bugs 298, 299
	and 300.

	* Makefile: Revamped and somewhat commented. Create three
	different kinds of distribution archives: 1. A "source" dist with
	configure + Makefile + separate .el files; 2. A single lyskom.el
	with all languages included; 3. A single lyskom.el with just one
	included language. Archives are named lyskom-elisp-client-*
	instead of lyskom-*. autoconf files config.{cache,log,status} are
	no longer included.

	* distribution-Makefile.in: Create file lists from the "developer"
	Makefile.

	* distribution-configure.in: Make English the default language.

	* distribution-README: Removed.

	* distribution-README.begin: New file. Common begin text for
	source and non-source dists.

	* distribution-README.end: New file. Common end text for source
	and non-source dists.

	* distribution-README.install-nonsrc: New file. Installation
	instructions for non-source dists.
